fix: popup displays at a higher z-index
Removed css overrides that positioned <Sidebar> at the bottom of the website

--- a/src/App.css
+++ b/src/App.css
@@ -56,14 +56,6 @@
   fill: #FFC72C;
 }
 
-.p-sidebar {
-  position: absolute!important;
-}
-
-.p-sidebar-left {
-  top: auto !important;
-}
-
 .peopleLink {
   color: black;
 }
